adapt to new rossystem model, deploy components defined in rossystem